Fix : Increased single product description spacing

--- a/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
@@ -1054,7 +1054,8 @@ p.demo_store[data-position="bottom"],
 }
 
 .woocommerce div.product .woocommerce-tabs {
-  margin-bottom: 2em;
+  margin-top: 4em;
+  margin-bottom: 4em;
   width: 100%;
 }
 
