--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -859,7 +859,8 @@ p.demo_store,
 		}
 
 		.woocommerce-tabs {
-			margin-bottom: 2em;
+			margin-top: 4em;
+			margin-bottom: 4em;
 			width: 100%;
 
 			ul.tabs {
